kuberInit/rabbit/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rabbit.build.lan
    http:
      paths:
      - backend:
          serviceName: rabbitmq-internal
          servicePort: 15672
        path: /
